# getfem

./: .gitignore  CMakeLists.txt  getfem_config.h.cmake  gmm_config.h.cmake
contrib/: CMakeLists.txt
contrib/aposteriori/: CMakeLists.txt
contrib/bimaterial_crack_test/: CMakeLists.txt
contrib/crack_plate/: CMakeLists.txt
contrib/delaminated_crack/: CMakeLists.txt
contrib/icare/: CMakeLists.txt
contrib/level_set_contact/: CMakeLists.txt
contrib/mixed_elastostatic/: CMakeLists.txt
contrib/opt_assembly/: CMakeLists.txt
contrib/static_contact_gears/: CMakeLists.txt
contrib/xfem_contact/: CMakeLists.txt
contrib/xfem_stab_unilat_contact/: CMakeLists.txt
cubature/: CMakeLists.txt
doc/: CMakeLists.txt
interface/: CMakeLists.txt
interface/src/: CMakeLists.txt  gf_mesh_get.cc  gf_poly.cc  gfi_rpc.h  gfi_rpc_server.c
interface/src/matlab/: CMakeLists.txt
interface/src/octave/private/: CMakeLists.txt
interface/src/python/: CMakeLists.txt
interface/src/scilab/: CMakeLists.txt
interface/tests/: CMakeLists.txt
src/: CMakeLists.txt  getfem_mesh_region.cc
src/getfem/: getfem_im_list.h  getfem_mesh.h  getfem_mesh_region.h
superlu/: CMakeLists.txt
tests/: CMakeLists.txt
