
add_subdirectory( icare )
add_subdirectory( delaminated_crack )
add_subdirectory( aposteriori )
add_subdirectory( xfem_stab_unilat_contact )
add_subdirectory( bimaterial_crack_test )
add_subdirectory( mixed_elastostatic )
add_subdirectory( xfem_contact )
add_subdirectory( crack_plate )
add_subdirectory( static_contact_gears )
add_subdirectory( level_set_contact )
#add_subdirectory( test_plasticity )
add_subdirectory( opt_assembly )
#add_subdirectory( continuum_mechanics )