cmake_minimum_required(VERSION 2.8...3.20)
set (project src)

set(${project}_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_interpolation.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_contact_and_friction_nodal.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_node_tab.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_functions_and_operators.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_interpolated_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_torus.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_regular_meshes.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_fem_composite.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesher.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_HHO.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_geometric_trans.cc
	${CMAKE_CURRENT_SOURCE_DIR}/dal_singleton.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_fourth_order.cc
	${CMAKE_CURRENT_SOURCE_DIR}/dal_bit_vector.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_model_solvers.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_contact_and_friction_integral.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_compile_and_exec.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_integration_composite.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_fem_level_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_models.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_im_level_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_ftool.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_convex_structure.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_kdtree.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_level_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_slice.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_region.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_workspace.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_context.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_nonlinear_elasticity.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_fem_sum.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_im.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_contact_and_friction_large_sliding.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_sparse_tensors.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_convex_ref_simplexified.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_im_data.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_linearized_plates.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_error_estimate.cc
	${CMAKE_CURRENT_SOURCE_DIR}/dal_backtrace.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_small_vector.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_import.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_convex_ref.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_level_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_omp.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_poly_composite.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_slicers.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_continuation.cc
	${CMAKE_CURRENT_SOURCE_DIR}/dal_static_stored_objects.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_fem_product.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_global_function.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_contact_and_friction_common.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_geotrans_inv.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mat_elem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_tree.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_locale.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_fem_level_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_assembling_tensors.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_mesh_structure.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_interpolation.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_torus.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_projected_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_superlu.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mesh_fem_global_function.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_enumeration_dof_para.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_rtree.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_export.cc
	${CMAKE_CURRENT_SOURCE_DIR}/bgeot_poly.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_mat_elem_type.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_plasticity.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_generic_assembly_semantic.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_level_set_contact.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_fem_global_function.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_partial_mesh_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_interpolation_on_deformed_domains.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_integration.cc
)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
add_library(${project} STATIC ${${project}_SOURCES} )