cmake_minimum_required(VERSION 2.8)
set (project superlu)

set(${project}_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/clacon.c
	${CMAKE_CURRENT_SOURCE_DIR}/slaqgs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zreadhb.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgscon.c
	${CMAKE_CURRENT_SOURCE_DIR}/dcopy_to_ucol.c
	${CMAKE_CURRENT_SOURCE_DIR}/claqgs.c
	${CMAKE_CURRENT_SOURCE_DIR}/csnode_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/cpruneL.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgssvx.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgssvx.c
	${CMAKE_CURRENT_SOURCE_DIR}/cmyblas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgscon.c
	${CMAKE_CURRENT_SOURCE_DIR}/cpanel_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgstrs.c
	${CMAKE_CURRENT_SOURCE_DIR}/dpivotL.c
	${CMAKE_CURRENT_SOURCE_DIR}/colamd.c
	${CMAKE_CURRENT_SOURCE_DIR}/smyblas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgsequ.c
	${CMAKE_CURRENT_SOURCE_DIR}/scsum1.c
	${CMAKE_CURRENT_SOURCE_DIR}/dlaqgs.c
	${CMAKE_CURRENT_SOURCE_DIR}/dsp_blas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/dpruneL.c
	${CMAKE_CURRENT_SOURCE_DIR}/dmyblas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/cpivotL.c
	${CMAKE_CURRENT_SOURCE_DIR}/ssnode_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/csnode_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgstrsL.c
	${CMAKE_CURRENT_SOURCE_DIR}/zpanel_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/cmemory.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgstrf.c
	${CMAKE_CURRENT_SOURCE_DIR}/zpruneL.c
	${CMAKE_CURRENT_SOURCE_DIR}/creadhb.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgscon.c
	${CMAKE_CURRENT_SOURCE_DIR}/ccopy_to_ucol.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgssv.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgstrf.c
	${CMAKE_CURRENT_SOURCE_DIR}/zutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/sp_coletree.c
	${CMAKE_CURRENT_SOURCE_DIR}/spanel_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/sp_preorder.c
	${CMAKE_CURRENT_SOURCE_DIR}/dsp_blas3.c
	${CMAKE_CURRENT_SOURCE_DIR}/dreadhb.c
	${CMAKE_CURRENT_SOURCE_DIR}/spivotL.c
	${CMAKE_CURRENT_SOURCE_DIR}/slamch.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgstrs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zlaqgs.c
	${CMAKE_CURRENT_SOURCE_DIR}/clangs.c
	${CMAKE_CURRENT_SOURCE_DIR}/cpivotgrowth.c
	${CMAKE_CURRENT_SOURCE_DIR}/dlacon.c
	${CMAKE_CURRENT_SOURCE_DIR}/dsnode_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/scolumn_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/spanel_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/ssnode_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/dmemory.c
	${CMAKE_CURRENT_SOURCE_DIR}/dcolumn_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/zsnode_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/scopy_to_ucol.c
	${CMAKE_CURRENT_SOURCE_DIR}/superlu_timer.c
	${CMAKE_CURRENT_SOURCE_DIR}/scomplex.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgsrfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zsp_blas3.c
	${CMAKE_CURRENT_SOURCE_DIR}/csp_blas3.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgssvx.c
	${CMAKE_CURRENT_SOURCE_DIR}/zcolumn_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/ccolumn_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zpivotgrowth.c
	${CMAKE_CURRENT_SOURCE_DIR}/zcopy_to_ucol.c
	${CMAKE_CURRENT_SOURCE_DIR}/dutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgssv.c
	${CMAKE_CURRENT_SOURCE_DIR}/ssp_blas3.c
	${CMAKE_CURRENT_SOURCE_DIR}/get_perm_c.c
	${CMAKE_CURRENT_SOURCE_DIR}/scolumn_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgstrs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zmyblas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/cutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/dsnode_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zpanel_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgssv.c
	${CMAKE_CURRENT_SOURCE_DIR}/dcolumn_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zlangs.c
	${CMAKE_CURRENT_SOURCE_DIR}/dpanel_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/sreadhb.c
	${CMAKE_CURRENT_SOURCE_DIR}/dlamch.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgstrs.c
	${CMAKE_CURRENT_SOURCE_DIR}/lsame.c
	${CMAKE_CURRENT_SOURCE_DIR}/dpanel_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgsequ.c
	${CMAKE_CURRENT_SOURCE_DIR}/spruneL.c
	${CMAKE_CURRENT_SOURCE_DIR}/util.c
	${CMAKE_CURRENT_SOURCE_DIR}/sp_ienv.c
	${CMAKE_CURRENT_SOURCE_DIR}/BLAS.c
	${CMAKE_CURRENT_SOURCE_DIR}/csp_blas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgscon.c
	${CMAKE_CURRENT_SOURCE_DIR}/spivotgrowth.c
	${CMAKE_CURRENT_SOURCE_DIR}/xerbla.c
	${CMAKE_CURRENT_SOURCE_DIR}/slangs.c
	${CMAKE_CURRENT_SOURCE_DIR}/memory.c
	${CMAKE_CURRENT_SOURCE_DIR}/dlangs.c
	${CMAKE_CURRENT_SOURCE_DIR}/zpivotL.c
	${CMAKE_CURRENT_SOURCE_DIR}/cpanel_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgstrf.c
	${CMAKE_CURRENT_SOURCE_DIR}/zcolumn_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/dpivotgrowth.c
	${CMAKE_CURRENT_SOURCE_DIR}/ssp_blas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/icmax1.c
	${CMAKE_CURRENT_SOURCE_DIR}/mmd.c
	${CMAKE_CURRENT_SOURCE_DIR}/relax_snode.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgsrfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/smemory.c
	${CMAKE_CURRENT_SOURCE_DIR}/zsnode_dfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/sutil.c
	${CMAKE_CURRENT_SOURCE_DIR}/slacon.c
	${CMAKE_CURRENT_SOURCE_DIR}/dcomplex.c
	${CMAKE_CURRENT_SOURCE_DIR}/ccolumn_bmod.c
	${CMAKE_CURRENT_SOURCE_DIR}/cgsequ.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgsequ.c
	${CMAKE_CURRENT_SOURCE_DIR}/zlacon.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgsrfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/izmax1.c
	${CMAKE_CURRENT_SOURCE_DIR}/dzsum1.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgsrfs.c
	${CMAKE_CURRENT_SOURCE_DIR}/heap_relax_snode.c
	${CMAKE_CURRENT_SOURCE_DIR}/zmemory.c
	${CMAKE_CURRENT_SOURCE_DIR}/dgstrf.c
	${CMAKE_CURRENT_SOURCE_DIR}/zgssvx.c
	${CMAKE_CURRENT_SOURCE_DIR}/sgssv.c
	${CMAKE_CURRENT_SOURCE_DIR}/f2c_lite.c
	${CMAKE_CURRENT_SOURCE_DIR}/zsp_blas2.c
	${CMAKE_CURRENT_SOURCE_DIR}/slu_dcomplex.h
	${CMAKE_CURRENT_SOURCE_DIR}/supermatrix.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_ddefs.h
	${CMAKE_CURRENT_SOURCE_DIR}/colamd.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_scomplex.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_cdefs.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_Cnames.h
	${CMAKE_CURRENT_SOURCE_DIR}/BLAS_f2c.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_zdefs.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_util.h
	${CMAKE_CURRENT_SOURCE_DIR}/slu_sdefs.h
)
add_library(${project} STATIC ${${project}_SOURCES} )