cmake_minimum_required(VERSION 2.8...3.20)
set (project .)

set(${project}_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_levelset.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_rpc_server.c
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_levelset_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_asm.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_eltm.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_model.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_cont_struct_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_slice.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_workspace.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_spmat_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_rpc_svc.c
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_rpc_clnt.c
	${CMAKE_CURRENT_SOURCE_DIR}/gf_levelset_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_misc.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im_data_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_geotrans_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_fem_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_linsolve.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_util.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_integ_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesher_object_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_fem_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_levelset_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im_data.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_compute.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_fem.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_rpc_xdr.c
	${CMAKE_CURRENT_SOURCE_DIR}/gf_cvstruct_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_integ.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_precond.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_global_function_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_interface.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_global_function.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_delete.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_slice_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_levelset.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_spmat.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_levelset.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_levelset_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_array.c
	${CMAKE_CURRENT_SOURCE_DIR}/gf_slice_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_poly.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_cont_struct.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesher_object.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_precond_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_fem_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_workspace.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_model_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_spmat_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_gsparse.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_geotrans.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_mesh_im_data_get.cc
	${CMAKE_CURRENT_SOURCE_DIR}/gf_model_set.cc
	${CMAKE_CURRENT_SOURCE_DIR}/getfem_interface.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_levelset.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_workspace.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_misc.h
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_array.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_precond.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_gsparse.h
	${CMAKE_CURRENT_SOURCE_DIR}/getfemint_std.h
	${CMAKE_CURRENT_SOURCE_DIR}/gfi_rpc.h
)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
add_library(${project} STATIC ${${project}_SOURCES} )